video error fix and remove some files

--- a/index.html
+++ b/index.html
@@ -984,10 +984,9 @@
 					</p>
 
 					<div class="embed-responsive embed-responsive-16by9">
-						<video width="560" height="315" src="/assets/video/update_ubuntu_terminal.mp4" controls></video>
-						<!-- <iframe width="560" height="315" src="https://www.youtube.com/watch?v=PZTLIVQxxEY&t=667s" frameborder="0"
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/PZTLIVQxxEY" frameborder="0"
 							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-							allowfullscreen></iframe> -->
+							allowfullscreen></iframe>
 					</div>
 					<br><span>Resources:</span>
 					<br><span>Get <a href="https://ohmyz.sh/"> Oh My Zsh </a></span>
