--- a/index.html
+++ b/index.html
@@ -989,8 +989,8 @@
 							allowfullscreen></iframe>
 					</div>
 					<br><span>Resources:</span>
-					<br><span>Get <a href="https://ohmyz.sh/"> Oh My Zsh </a></span>
-					<br><span>Theme <a href="https://github.com/Bhattacharyya-Avi/powerlevel10k">PowerLevel10k</a></span>
+					<br><span>Get <a target="_blank" href="https://ohmyz.sh/"> Oh My Zsh </a></span>
+					<br><span>Theme <a target="_blank" href="https://github.com/Bhattacharyya-Avi/powerlevel10k">PowerLevel10k</a></span>
 					<br><span><small>source: https://www.youtube.com/watch?v=PZTLIVQxxEY&t=667s&ab_channel=MuhammadbinYusrat</small></span>
 				</div>
 			</div>
