--- a/index.html
+++ b/index.html
@@ -914,17 +914,7 @@
 						</div>
 					</div>
 					
-					<!--
-## Remove application from ubuntu
-```
-```
-
-## 
-```
-```
-
-```
-```-->
+					<!--Remove application from ubuntu-->
 					<div class="form-group mb-3">
 						<label for="exampleInputEmail1">Remove application</label>
 						<div class="container">
@@ -980,7 +970,7 @@
 
 					<h3 class="mt-5 mb-3">Restyle Terminal</h3>
 					<p>
-						I have followed this vedio. You may follow other video 
+						I have followed this video. You may follow other video 
 					</p>
 
 					<div class="embed-responsive embed-responsive-16by9">
